Fixed overlaying text and whitespace
Added meta description for SEO too

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -118,8 +118,12 @@ margin-top: 3.8rem;
     .container{
         margin: 0 auto;
     }
-    .card, .mb-3 {
+    .mb-3 {
     width: 14rem;
+    }
+
+    .border-end {
+        border: 0px solid !important;
     }
 
 }
@@ -130,8 +134,6 @@ margin-top: 3.8rem;
         max-width: 324px;
     }
     .card-img-top{
-        max-height: 50px;
-        max-width: 50px;
         margin-top: 0.4rem;
     }
     .card-profile{
